src/app/player/player.component.css
.video-player {
    margin: 0 auto;
    min-width: 300px;
}

.video-player:focus {
    outline: none;
}

.audio-styles {
    height: 50px;
    width: 100%;
}

.video-styles {
    width: 100%;
    height: 75vh;
}

/* TODO(mdc-migration): The following rule targets internal classes of button that may no longer apply for the MDC version. */
::ng-deep .mat-button-toggle-label-content {
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
}

.container-video {
    max-width: 100%;
    padding-left: 0px;
    padding-right: 0px;
}

.progress-bar {
    position: absolute;
    left: 0px;
    bottom: -1px;
}

.spinner {
    bottom: -2px;
    left: 6px;
    position: absolute;
}

.buttons {
    position: relative;
}

.action-column {
    display: flex;
    justify-content: flex-end;
}

.action-buttons-row {
    align-items: center;
    display: flex;
    flex-wrap: nowrap;
    justify-content: flex-end;
    overflow-x: auto;
    white-space: nowrap;
    width: 100%;
}

.action-buttons-row button {
    flex: 0 0 auto;
}

.save-button {
    right: 25px;
    position: fixed;
    bottom: 25px;
}

.share-button {
    left: 25px;
    position: fixed;
    bottom: 25px;
}

.favorite-button {
    left: 25px;
    position: fixed;
    bottom: 25px;
}

.video-col {
    padding-right: 0px;
    padding-left: 0.01px;
    height: 100%;
    width: 100%;
}

.audio-col {
    margin: 0 auto;
    margin-top: 10px;
    width: 95%;
}

.save-icon {
    bottom: 1px;
    position: relative;
}

.update-playlist-button-div {
    float: right;
    margin-right: 30px;
    margin-top: 25px;
    margin-bottom: 15px;
}

.skip-ad-button {
    position: absolute;
    right: 20px;
    bottom: 75px;
}

.playback-mode-button {
    opacity: 0.6;
}

.playback-mode-button.active {
    opacity: 1;
}

